--- a/fee.css
+++ b/fee.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway:300,500,700');
 
-/* Global */
+/* global */
 * {
     box-sizing: border-box;
 }
